(library
 (inline_tests)
 (name lib)
 (libraries emoji bos bos.setup re)
 (preprocess
  (pps ppx_expect ppx_inline_test)))

; The "pickled" GitHub emoji dictionary, that can be promoted into the lib
(rule
 (alias runtest)
 (action (diff github_table.ml github_table.ml.gen)))

; Generate the "pickled" GitHub emoji dictionary
(rule
 (targets github_table.ml.gen)
 (deps    (:gen ../gen/gen_github_emoji.exe))
 (action  (run %{gen} %{targets})))
